# OpenPDM

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  PROJECT_CHARTER.MD  README.md  ROADMAP.md  TASK_TEMPLATE.md  alembic.ini  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.agents/: AGENTS.md
.github/workflows/: ci.yaml
backend/: Dockerfile
backend/migrations/: env.py
backend/tests/: test_blob_upload_sessions.py  test_core_platform_api.py  test_dummy_categories_plugin_e2e.py  test_extension_api_v1.py  test_foundation_api.py  test_operational_collections.py  test_plugin_configuration_events.py  test_plugin_runtime_sandbox.py  test_postgresql_phase3_audit.py  test_reference_plugin_e2e.py
deployment/: compose.yaml
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: API_FLOWS.md  API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  GITHUB_ARCH.md  INTERNAL_FUNCTIONING.md  PHASE_0_DEMO.md  PHASE_3_ASSET_GRAPH_QUERY_LIMITS.md  PLUGIN_DEVELOPMENT.md  PLUGIN_SECURITY.md  PROJECT_CHARTER.md  README.md  VISION.md  WEB_UI_MANUAL_TEST_GUIDE.md
docs/adr/: ADR-0001 — Adopt a Modular Monolith Architecture.md  ADR-0002 — Define Platform Boundaries.md  ADR-0003 — Define the Asset Lifecycle Model.md  ADR-0004 — Use Python and FastAPI for the Backend.md  ADR-0005 — Use PostgreSQL as the Primary Database.md  ADR-0006 — Use MinIO and S3 API for Blob Storage.md  ADR-0007 — Use React TypeScript and Vite for the Web UI.md  ADR-0008 — Use Tauri for the Desktop Client.md  ADR-0009 — Adopt Local Authentication First with an OIDC-Compatible User Identity Model.md  ADR-0010 — Adopt a Generic Key-Value Metadata Model Without Business Semantics.md  ADR-0011 — Use PostgreSQL Search Only for Phase 1.md  ADR-0012 — Adopt Simple Project-Scoped RBAC for Phase 1.md  ADR-0013 — Provide a Plugin Infrastructure Skeleton Only in Phase 1.md  ADR-0014 — Adopt a Simple Generic Lifecycle Status Primitive for Phase 1.md  ADR-0015 — Define Organization and Project Platform Module Boundaries for Phase 1.md  ADR-0016 — Define Asset Lifecycle Platform Module Boundaries for Phase 1.md  ADR-0017 — Define the Collaboration State Model for Phase 2.md  ADR-0018 — Define Asset Locking Rules for Phase 2 Collaboration.md  ADR-0019 — Define the Collaboration API Surface for Phase 2.md  ADR-0021 — Define Collaboration Notifications for Phase 2.md  (+25 more)
frontend/: Dockerfile  index.html  package.json  vite.config.ts
scripts/: build_dummy_categories_plugin.py  build_reference_plugin.py  dev.py  scaffold_plugin.py  start_all.py  validate_documentation.py  validate_phase0.py
tests/: test_architecture_boundaries.py  test_deployment_compose.py  test_start_all_script.py
(+104 files in other folders)
